--- a/css/style.css
+++ b/css/style.css
@@ -135,15 +135,16 @@ a{
 }
 .content-education{ 
     display: flex;
+    background-color: antiquewhite;
     flex-wrap: wrap;
     margin-bottom: 500px;
     justify-content: space-around;
 }
 .articulo{
-    width: 30%;
-    margin-top: 50px;
+    width: 60%;
+    margin-top: 60px;
     background-color: #fff;
-    border-radius: 10px;
+    border-radius: 30px;
     padding: 45px 30px 60px 30px;
     transition: all ease-in-out .5s;
 }
